--- a/AutoLayoutTest/AutoLayoutTest/Base.lproj/LaunchScreen.storyboard
+++ b/AutoLayoutTest/AutoLayoutTest/Base.lproj/LaunchScreen.storyboard
@@ -21,12 +21,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="254" y="70"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="ColorDark">
-            <color red="0.0" green="0.24799999594688416" blue="0.34599998593330383" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
